# piascomms

./: .gitignore  README.MD  pyproject.toml
src/piascomms/: client.py  layout_properties.py  utils.py
src/piascomms/internal_geometry/: variables_in_dataclass.py
src/piascomms/internal_geometry/shape_manipulation/: __init__.py  boundary_contour_factory.py  physical_plane_factory.py  ship_yard.py  xml_request.py
src/piascomms/internal_geometry/shape_manipulation/xml2dataclasses/: __init__.py  physical_planes.py  principal_charasteristics.py  reply.py  xml_utils.py
tests/: boundary_factory_test.py  client_test.py  delete_plane.py  layout_properties_test.py  main_request.py  planes.py  save_layout.py  test_compartments.py  test_compartments_2.py  test_normalizer.py
